--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -42,6 +42,9 @@
 		"coroshop": {
 			"desc": "E-commerce con pagos en Stripe o PayPal."
 		},
+		"time_killer": {
+			"desc": "Webapp que dispone de varios minijuegos offline"
+		},
 		"titles": {
 			"origin": "Origen de la Idea",
 			"development": "Proceso de desarrollo",
@@ -126,6 +129,25 @@
 		},
 		"learning": {
 			"f_desc": "El desarrollo de este proyecto me ayudo a aumentar mi entendimiento de TypeScript, sobre todo de los decoradores, ya que estos son bastante utilizados en Nest. Además, también aumente mi comprensión en lo que respecta a la inyección de dependencias y a como esta facilita el proceso de testear cada módulo. Finalmente, aprendí una mejor forma de organizar las carpetas y archivos de un proyecto, consistente en agrupar los archivos por prestación o feature, lo que permite tener las dependencias de cada módulo más cercanas."
+		}
+	},
+	"time_killer": {
+		"desc": "Time Killer es una webapp que dispone de varios minijuegos offline como el juego de Simon, la Culebrita, Flappy Bird, Memoria y Tetris. Además, permite al usuario iniciar sesión para acceder al ranking de mejores puntuaciones.",
+		"stack": {
+			"desc": "La aplicación fue desarrollada con el framework Next el cual utiliza React como librería para desarrollar las interfaces. Para los estilos utilice Tailwind CSS y para manejar el estado de la aplicación utilice los hooks básicos de los que dispone React para realizar custom hooks enfocados en este aspecto. Por su parte, para el backend utilice el BaaS Firebase con su base de datos Firestore."
+		},
+		"origin": {
+			"desc": "Desde siempre me han gustado los videojuegos, por lo que desde que comencé a programar quise desarrollar o emular algún tipo de videojuego interactivo. Además, sabía que el desarrollo de esta aplicación me permitiría comprender de mejor forma la fase de renderizado de React, ya que este es un factor importante a considerar con esta librería cuando se desarrollan aplicaciones interactivas que disponen de intervalos."
+		},
+		"development": {
+			"f_desc": "El primer paso para desarrollar esta aplicación consistió en seleccionar los minijuegos que agregaría, para lo cual me documente en cuanto a los juegos que otras personas habían desarrollado con react. Después, comencé a desarrollar cada uno de los juegos y el home page, iterando y refactorizando código para mejorar el performance o para aplicar mejores prácticas. ",
+			"s_desc": "Posteriormente, comencé a trabajar en las sesiones y autenticación de la aplicación, desarrollando las vistas de inicio de sesión y de registro, además de integrar Firebase y modelar los documentos que conformarían la base de datos en Firestore. Finalmente, agregue la lógica y los componentes para integrar el sistema de puntuaciones."
+		},
+		"challenges": {
+			"desc": "Uno de los desafíos que enfrente durante el desarrollo de la aplicación fue comprender como trabajar adecuadamente con intervalos, ya que dentro de los mismos se crean clausuras y por lo tanto los valores no cambian. Además, otro problema que enfrente estuvo relacionado a la característica de React en su versión 18 en delante de ejecutar dos veces los efectos, lo que causaba bugs en los juegos que usan intervalos, como es el caso de Flappy Bird o Tetris."
+		},
+		"learning": {
+			"desc": "El desarrollo de este proyecto me permitió comprender de mejor forma la fase de renderizado de React, así como las mejores prácticas concernientes a como estructurar y manejar el estado de la aplicación. Además, aprendí a reconocer cuando se deben utilizar efectos y que aquellos cambios de estado provocados por el usuario siempre deben ir en los event handlers, lo que permite desarrollar código más limpio y aumenta el performance de la aplicación."
 		}
 	}
 }
