--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -32,7 +32,7 @@
 	},
 	"projects": {
 		"title": "Projects",
-		"action": "View project",
+		"action": "View details",
 		"web_access": {
 			"desc": "Automatic web accessibility evaluation tool and contrast checker"
 		},
