--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -32,7 +32,7 @@
 	},
 	"projects": {
 		"title": "Proyectos",
-		"action": "Ver proyecto",
+		"action": "Ver detalles",
 		"web_access": {
 			"desc": "Herramienta de evaluación automática de accesibilidad web y evaluador de contraste."
 		},
