update spanish greeting

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -7,7 +7,7 @@
 		"connect": "Vamos a conectar"
 	},
 	"hero": {
-		"greet": "¿Hola que tal? Soy",
+		"greet": "Hola, ¿que tal? Soy",
 		"banner": {
 			"developer": "Desarrollador Full Stack",
 			"engineer": "Ingeniero de Sistemas"
